--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,5 +14,8 @@ body {
     width: 500px;
     @media screen and (max-width: 500px) /* Mobile */ {
         width: 100vw;
-      }
+    }
+      @media (min-width: 1280px) {
+        transform: translateY(-185px);
+    }
 }
